# autogpt

./: .gitignore  README.md  pyproject.toml
scripts/: clone_revid_ai.py
src/revid_clone/: __init__.py  ai_engines.py  cli.py  models.py  project_service.py  storage.py
tests/: test_revid_clone.py
