[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "revid-clone"
version = "0.1.0"
description = "A lightweight local clone of Revid AI-style video automation"
authors = [{name = "AutoGPT"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.scripts]
revid = "revid_clone.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
